# DisparadorArcaCPP

./: CMakeLists.txt  Dockerfile  README.md
include/: Api.h  Config.h  Utils.h  Validator.h
include/Api/: Api.h  Models.h
include/Database/: Database.h  Fetch.h  Insert.h  Models.h
src/: Api.cpp  Config.cpp  Validator.cpp  main.cpp
src/Database/: Fetch.cpp  Insert.cpp
